--- a/PG2/Entrega_oral_1/Cesiter.qmd
+++ b/PG2/Entrega_oral_1/Cesiter.qmd
@@ -93,11 +93,12 @@ cat("diferencia entre lo esperado y lo obtenido:", round(abs(E2 - E2dadoE1),2))
 Con esta relación demostramos que no existe una relación entre si usamos un lenguaje "popular" y nuestra salud mental ya que ambos eventos son independientes.
 
 ```{r}
-#mosaic plot
-
-
 # mayor o igual a 2 vector
 total$cantProblemas = total$cantProblemas >= 2
 
-mosaicplot(table(total$evento1, total$cantProblemas), main = "Lenguaje popular y salud mental")
+#mosaic plot con labels
+mosaicplot(table(total$evento1, total$cantProblemas),
+	main = "Eventos independientes",
+	xlab = "Uno o más de los 5 lenguajes populares",
+	ylab = "2 o más problemas mentales")
 ```
